# backgammon-2d

./: .gitignore  LICENSE  README.md  asset.py  backgammon.py  config.py  decorators.py  game_manager.py  main.py  models.py  network.py  pyproject.toml  server.py  sound_manager.py
backgammon/: backgammon.py  backgammon_ai.py
graphics/: button.py  buttons.py  elements.py  graphics_manager.py  outline_text.py  slider.py  styled_elements.py  text_button.py  track_button.py
menus/: bot.py  game_screens.py  main_menu.py  menus.py  offline.py  offline_game.py  options.py  play_menu.py  screen.py  screens.py
menus/games/: bot.py  local_client.py  offline.py  online_client.py
menus/online_menu/: ip.py  online.py
models/: address.py  game_state.py  move.py  player.py  scored_move.py
server/: server.py
